2003-11-03 Bernhard Held <bernhard@bernhardheld.de>

	Use headers defined in the C[++] standards:
	* sim/ucsim/gui.src/serio.src/fileio.cc
	* sim/ucsim/gui.src/serio.src/frontend.cc
	* sim/ucsim/gui.src/serio.src/main.cc
	* sim/ucsim/gui.src/serio.src/posix_signal.cc
	* support/Util/NewAlloc.c
	* as/hc08/lklibr.c
	* as/mcs51/lklibr.c
	* as/z80/aslist.c
	* as/z80/assym.c

2003-11-03  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* Added MSVC projects for hc08 assembler and linker:
	all.dsp, config.dsp, sdcc.dsw, /as/hc08/as_hc08.dsp,
	/as/hc08/link_hc08.dsp

2003-11-03 Martin Helmling <Martin.Helmling@octo-soft.de>

        * debugger/mcs51/cmd.c: allows filename starting with digit(+ some debug)

2003-11-02 Bernhard Held <bernhard@bernhardheld.de>

        * src/SDCCmain.c (linkEdit): "fixed" again bug #833605

2003-11-01 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c: xdata initialization is 13 bytes shorter now

2003-10-31  Borut Razem <borut.razem@siol.net>

	* support/cpp2/cpplib.h,
	  support/cpp2/cpplib.c,
	  support/cpp2/cpplex.c,
	  support/cpp2/cppinit.c: introduced #pragma preproc_asm [ + | - ]
	  to switch _asm block preprocessing on / off. Default is
	  #pragma preproc_asm +

2003-10-31  Borut Razem <borut.razem@siol.net>

	* support/cpp2/cpplex.c: Fixed _WIN32 problem with CR-CR-LF sequences
	  when outputting comment blocks (when executed with -C option) and
	  _asm (SDCPP specific) blocks

2003-10-31 Erik Petrich <epetrich@ivorytower.norman.ok.us>
	
	* as/hc08/lkrloc.c (relr): Fixed ihx output, fixed lastAreaIndex warning

2003-10-31 Klaus Flittner <klaus_flittner@gmx.de>

	* src/SDCCcse.c (updateSpillLocation): fixed bug #808027

2003-10-31 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c (linkEdit): "fixed" bug #833605
	* src/SDCCast.c (decorateType): fixed bug #832664

2003-10-31  Borut Razem <borut.razem@siol.net>

	* support\cpp2\cpplex.c: fixed for SDCPP:
	  comments(when executed with -C option) and _asm blocks