@@ -17,7 +17,9 @@
 #include <sys/types.h>
 #include <sys/malloc.h>
 #else
+#ifdef HAVE_MALLOC_H
 #include <malloc.h>
+#endif
 #endif
 #include "asm.h"
 
